--- a/ts/objectarium-schema/package.json
+++ b/ts/objectarium-schema/package.json
@@ -25,7 +25,7 @@
         "typescript": "^4.6.3"
     },
     "scripts": {
-        "clean": "rm -rf gen-ts && mkdir gen-ts",
+        "clean": "rm -rf gen-ts && rm -rf dist && mkdir gen-ts",
         "build": "tsc"
     },
     "exports": "./dist/schema.d.ts",
