--- a/ts/law-stone-schema/package.json
+++ b/ts/law-stone-schema/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@axone/law-stone-schema",
-    "version": "v3.0.0",
+    "version": "3.0.0",
     "private": false,
     "repository": {
         "type": "git",
