--- a/.github/workflows/update-schema.yml
+++ b/.github/workflows/update-schema.yml
@@ -191,4 +191,4 @@ jobs:
           commit_author: ${{ vars.BOT_GIT_AUTHOR_NAME }} <${{ vars.BOT_GIT_AUTHOR_EMAIL }}>
           commit_message: "${{ github.event.inputs.draft == 'true' && 'feat: update schema files' || 'chore(release): perform release' }} ${{ github.event.inputs.draft == 'false' && github.event.inputs.ref || '' }}"
           tagging_message: ${{ github.event.inputs.draft == 'false' && github.event.inputs.ref || '' }}
-          file_pattern: "*.json */README.md go/**/*.go"
+          file_pattern: "*.json */README.md go/**/*.go go/**/go.mod go/**/go.sum"
